Feat: Ajustando regras do ms reservas